update vercel json

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
     "redirects": [
         {
-            "src": "/(.*)",
-            "dest": "build/index.html"
+            "source": "/(.*)",
+            "destination": "build/index.html"
         }
     ]
 }
